# claude-skills

./: .gitignore  CLAUDE.md  README.md  SKILL.md
.claude-plugin/: marketplace.json
assets/: template.html
docs/plans/: 2026-02-10-seven-plugins.md  2026-02-15-kokoro-tts-v3-implementation.md  2026-02-15-kokoro-tts-v3-weighted-communication.md  2026-02-15-technical-visualizer-design.md  2026-02-15-tmux-adaptive-monitoring-design.md  2026-02-15-tmux-adaptive-monitoring-plan.md  2026-02-16-ai-scry-dashboards-design.md  2026-02-16-ai-scry-dashboards-plan.md  2026-02-16-technical-visualizer-rewrite-design.md  2026-02-16-technical-visualizer-rewrite-plan.md  2026-02-16-technical-visualizer-rewrite.md  2026-02-17-agent-orchestrator-design.md  2026-02-17-agent-orchestrator-plan.md  2026-02-17-kokoro-tts-v33-intermediate-ticks.md  2026-02-17-kokoro-tts-v33-plan.md  2026-02-18-note-processor-design.md  2026-02-18-note-processor-plan.md  firmware-architecture-failure-analysis.md  freertos-guide-analysis.md  peripherals-guide-analysis.md  skill-comparison-analysis.md
marketplace/: catalog.json  install.sh
plugins/agent-orchestrator/: CLAUDE.md
plugins/agent-scry/: CLAUDE.md  plugin.json
plugins/ai-scry/: CLAUDE.md  plugin.json
plugins/bits-ui-dev/: README.md
plugins/design-engineer/: .gitignore  README.md
plugins/kokoro-tts/: plugin.json
plugins/kokoro-tts/server/: kokoro_server.py  pyproject.toml
plugins/noted-vault-manager/: README.md
plugins/technical-visualizer/: README.md
references/: browser-runtimes.md
skills/ascii-image-converter/: SKILL.md
(+223 files in other folders)
